--- a/src/App.css
+++ b/src/App.css
@@ -198,6 +198,7 @@ h6 {
 .sectionHeader {
     text-align: center;
     margin-bottom: 40px;
+    margin-top: 20px;
     font-size: 1.8rem;
     padding-left: 5%;
     padding-right: 5%;
@@ -262,6 +263,10 @@ h6 {
     order: 1;
 }
 
+.stenholtImg {
+    margin-top: 10px;
+}
+
 .projectInfo {
     order: 2;
 }
@@ -297,7 +302,7 @@ h6 {
 }
 
 .wavesProjects {
-    margin-bottom: -5px;
+    margin-bottom: -6px;
 }
 
 
@@ -356,7 +361,8 @@ h6 {
 }
 
 .mobileLink {
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 
@@ -725,6 +731,7 @@ h6 {
 
     .sectionHeader {
         font-size: 2.2rem;
+        margin-top: 0;
     }
 
     .skillsList {
